[package]
name = "data-gator"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json = "1.0"
serde = {version="1.0", features = ["derive"]}
colored = "2.1.0"
tokio = {version="1.38", features = ["full"]}
jsonrpsee-http-client = "0.20.3"
jsonrpsee-core = "0.20.3"
anyhow = "1.0"
indicatif = "0.17.8"